--- a/css/style.css
+++ b/css/style.css
@@ -4,22 +4,12 @@ body {
 
 /* Containers */
 
-
-.alert-container .col-12 {
-    padding-left: 0;
-    padding-right: 0;
+.container-wrapper--red {
+    background-color: #f05f40;
+    color: white;
 }
 
-.site-wide-alert {
-    color: #544600;
-    background-color: #eec802; /* have a look at the color picker from google dev tools*/
-    border-color: #eec802;
-    padding: 5px 15px;
-    margin-bottom: 0;
-    border: 1px solid transparent;
-    border-radius: 0; /*remove rounded corners*/
-}
-
+.alert-container {}
 
 .callout-container {
     height: 100vh; /* call out section to be 100% browswer window*/
@@ -47,26 +37,11 @@ body {
     background-color: rgba(0, 0, 0, 0.5); /* 1 is visible and 0 s transparent*/
 }
 
-.quotes-container {}
-
-.features-container {}
-
-/* Block dividers */
-
-.block-divider {
-    width: 75px;
-    height: 5px;
-    border: 0;
-    background-color: #444;
-}/* to style the hortorizal rule <ht>*/
-
-.block-divider--orange {
-    background-color: #f05f40;
+.content-container {
+    padding-top: 75px;
+    padding-bottom: 75px;
 }
 
-.block-divider--short {
-    width: 35px;
-}
 
 /* Navbar */
 
@@ -122,6 +97,26 @@ body {
     color: #d0d0d0;
 }
 
+/* Block dividers */
+
+.block-divider {
+    width: 75px;
+    height: 5px;
+    border: 0;
+    background-color: #444;
+}/* to style the hortorizal rule <ht>*/
+
+.block-divider--orange {
+    background-color: #f05f40;
+}
+
+.block-divider--white {
+    background-color: white;
+}
+
+.block-divider--short {
+    width: 35px;
+}
 /* Buttons */
 
 .btn--cta { /*maming classes and id's block element modifier --*/
@@ -136,7 +131,7 @@ body {
     border-color: #f05f40;
 }
 
-/*4 sudo elements when we hover over button
+/*4 sudo elements when we hover over button*/
 .btn--red:hover,
 .btn--red:active,
 .btn--red:focus,
@@ -144,4 +139,55 @@ body {
     background-color: #df4929;
     border-color: #df4929;
     color: white;
+}
+
+.site-wide-alert {
+    color: #544600;
+    background-color: #eec802; /* have a look at the color picker from google dev tools*/
+    border-color: #eec802;
+    padding: 5px 15px;
+    margin-bottom: 0;
+    border: 1px solid transparent;
+    border-radius: 0; /*remove rounded corners*/
+}
+
+/* Page Headers */
+
+.page-header {
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2 {
+    margin-top: 0;
+}
+
+/* Quotes */
+
+.quotes .page-header {
+    margin-bottom: 25px;
+}
+
+/* Features */
+
+.feature {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.feature i {
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 45px;
+}
+
+.feature .btn {
+    background-color: white;
+    border-color: white;
+    border-radius: 15px;
+    min-width: 100px; /*they can grow but not shrink*/
+    font-weight: bold;
+    margin-top: 10px;
+    color: #f05f40;
 }
